hw2/y.output
   0  $accept : program $end

   1  program : code

   2  code : code declaration
   3       | declaration

   4  declaration : scalar_declaration
   5              | array_declaration
   6              | func_declaration

   7  scalar_declaration : scalar_type scalar_ids ';'

   8  scalar_type : scalar_type TYPE
   9              | TYPE

  10  scalar_ids : scalar_ids ',' scalar_id
  11             | scalar_id

  12  scalar_id : ID '=' expression
  13            | '*' ID '=' expression
  14            | ID
  15            | '*' ID

  16  array_declaration : scalar_type arrays ';'

  17  arrays : arrays ',' array
  18         | array

  19  array : ID array_shape '=' '{' array_content_elements '}'
  20        | ID array_shape

  21  array_shape : array_shape '[' expression ']'
  22              | '[' expression ']'

  23  array_content_elements : array_content_element ',' array_content_elements
  24                         | array_content_element

  25  array_content_element : '{' array_content_elements '}'
  26                        | expression

  27  func_declaration : scalar_type function ';'
  28                   | scalar_type function compound_statements

  29  function : ID '(' func_parameters ')'
  30           | '*' ID '(' func_parameters ')'

  31  func_parameters : func_parameters ',' func_parameter
  32                  | func_parameter

  33  func_parameter : scalar_type ID
  34                 | scalar_type '*' ID
  35                 |

  36  expression :
  37             | expr_14

  38  expr_14 : expr_12 '=' expr_14
  39          | expr_12

  40  expr_12 : expr_12 OR expr_11
  41          | expr_11

  42  expr_11 : expr_11 AND expr_10
  43          | expr_10

  44  expr_10 : expr_10 '|' expr_9
  45          | expr_9

  46  expr_9 : expr_9 '^' expr_8
  47         | expr_8

  48  expr_8 : expr_8 '&' expr_7
  49         | expr_7

  50  expr_7 : expr_7 EQUAL expr_6
  51         | expr_7 NOT_EQUAL expr_6
  52         | expr_6

  53  expr_6 : expr_6 '<' expr_5
  54         | expr_6 '>' expr_5
  55         | expr_6 GE expr_5
  56         | expr_6 LE expr_5
  57         | expr_5

  58  expr_5 : expr_5 RS expr_4
  59         | expr_5 LS expr_4
  60         | expr_4

  61  expr_4 : expr_4 '+' expr_3
  62         | expr_4 '-' expr_3
  63         | expr_3

  64  expr_3 : expr_3 '*' expr_2
  65         | expr_3 '/' expr_2
  66         | expr_3 '%' expr_2
  67         | expr_2

  68  expr_2 : INC expr_2
  69         | DEC expr_2
  70         | '+' expr_2
  71         | '-' expr_2
  72         | '!' expr_2
  73         | '~' expr_2
  74         | '*' expr_2
  75         | '&' expr_2
  76         | '(' scalar_type ')' expr_2
  77         | '(' scalar_type '*' ')' expr_2
  78         | expr_1

  79  expr_1 : expr_1 INC
  80         | expr_1 DEC
  81         | expr_1 variable '(' ')'
  82         | '(' expression ')'
  83         | expr_1 ID array_shape
  84         | ID array_shape
  85         | expr_1 '(' func_call_parameters ')'
  86         | variable
  87         | literal
  88         | Null

  89  func_call_parameters : func_call_parameters ',' expression
  90                       | expression

  91  variable : ID

  92  literal : INT
  93          | FLOAT
  94          | CHAR
  95          | STR

  96  statements : statements statement
  97             | statement

  98  statement : expression ';'
  99            | if_statement
 100            | switch_statement
 101            | while_statement
 102            | for_statement
 103            | return_statement
 104            | break_statement
 105            | continue_statement
 106            | compound_statements

 107  if_statement : IF '(' expression ')' compound_statements
 108               | IF '(' expression ')' compound_statements ELSE compound_statements

 109  switch_statement : SWITCH '(' expression ')' '{' switch_cases '}'

 110  switch_cases : switch_cases switch_case
 111               | switch_case

 112  switch_case : CASE expression ':' statements
 113              | DEFAULT ':' statements
 114              | CASE expression ':'
 115              | DEFAULT ':'

 116  while_statement : WHILE '(' expression ')' statement
 117                  | DO statement WHILE '(' expression ')' ';'

 118  for_statement : FOR '(' for_parameters ')' statement

 119  for_parameters : expression ';' expression ';' expression

 120  return_statement : RETURN expression ';'

 121  break_statement : BREAK ';'

 122  continue_statement : CONTINUE ';'

 123  compound_statements : '{' compound_statements scalar_declaration '}'
 124                      | '{' compound_statements array_declaration '}'
 125                      | '{' scalar_declaration '}'
 126                      | '{' array_declaration '}'
 127                      | '{' statements '}'
 128                      | '{' '}'

state 0
	$accept : . program $end  (0)

	TYPE  shift 1
	.  error

	program  goto 2
	code  goto 3
	declaration  goto 4
	scalar_declaration  goto 5
	scalar_type  goto 6
	array_declaration  goto 7
	func_declaration  goto 8


state 1
	scalar_type : TYPE .  (9)

	.  reduce 9


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : code .  (1)
	code : code . declaration  (2)

	TYPE  shift 1
	$end  reduce 1

	declaration  goto 9
	scalar_declaration  goto 5
	scalar_type  goto 6
	array_declaration  goto 7
	func_declaration  goto 8


state 4
	code : declaration .  (3)

	.  reduce 3


state 5
	declaration : scalar_declaration .  (4)

	.  reduce 4


state 6
	scalar_declaration : scalar_type . scalar_ids ';'  (7)
	scalar_type : scalar_type . TYPE  (8)
	array_declaration : scalar_type . arrays ';'  (16)
	func_declaration : scalar_type . function ';'  (27)
	func_declaration : scalar_type . function compound_statements  (28)

	'*'  shift 10
	TYPE  shift 11
	ID  shift 12
	.  error

	scalar_ids  goto 13
	scalar_id  goto 14
	arrays  goto 15
	array  goto 16
	function  goto 17


state 7
	declaration : array_declaration .  (5)

	.  reduce 5


state 8
	declaration : func_declaration .  (6)

	.  reduce 6


state 9
	code : code declaration .  (2)

	.  reduce 2


state 10
	scalar_id : '*' . ID '=' expression  (13)
	scalar_id : '*' . ID  (15)
	function : '*' . ID '(' func_parameters ')'  (30)

	ID  shift 18
	.  error


state 11
	scalar_type : scalar_type TYPE .  (8)

	.  reduce 8


state 12
	scalar_id : ID . '=' expression  (12)
	scalar_id : ID .  (14)
	array : ID . array_shape '=' '{' array_content_elements '}'  (19)
	array : ID . array_shape  (20)
	function : ID . '(' func_parameters ')'  (29)

	'='  shift 19
	'('  shift 20
	'['  shift 21
	';'  reduce 14
	','  reduce 14

	array_shape  goto 22


state 13
	scalar_declaration : scalar_type scalar_ids . ';'  (7)
	scalar_ids : scalar_ids . ',' scalar_id  (10)

	';'  shift 23
	','  shift 24
	.  error


state 14
	scalar_ids : scalar_id .  (11)

	.  reduce 11


state 15
	array_declaration : scalar_type arrays . ';'  (16)
	arrays : arrays . ',' array  (17)

	';'  shift 25
	','  shift 26
	.  error


state 16
	arrays : array .  (18)

	.  reduce 18


state 17
	func_declaration : scalar_type function . ';'  (27)
	func_declaration : scalar_type function . compound_statements  (28)

	'{'  shift 27
	';'  shift 28
	.  error

	compound_statements  goto 29


state 18
	scalar_id : '*' ID . '=' expression  (13)
	scalar_id : '*' ID .  (15)
	function : '*' ID . '(' func_parameters ')'  (30)

	'='  shift 30
	'('  shift 31
	';'  reduce 15
	','  reduce 15


state 19
	scalar_id : ID '=' . expression  (12)
	expression : .  (36)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	';'  reduce 36
	','  reduce 36

	expression  goto 47
	expr_14  goto 48
	expr_12  goto 49
	expr_11  goto 50
	expr_10  goto 51
	expr_9  goto 52
	expr_8  goto 53
	expr_7  goto 54
	expr_6  goto 55
	expr_5  goto 56
	expr_4  goto 57
	expr_3  goto 58
	expr_2  goto 59
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 20
	function : ID '(' . func_parameters ')'  (29)
	func_parameter : .  (35)

	TYPE  shift 1
	')'  reduce 35
	','  reduce 35

	scalar_type  goto 63
	func_parameters  goto 64
	func_parameter  goto 65


state 21
	array_shape : '[' . expression ']'  (22)
	expression : .  (36)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	']'  reduce 36

	expression  goto 66
	expr_14  goto 48
	expr_12  goto 49
	expr_11  goto 50
	expr_10  goto 51
	expr_9  goto 52
	expr_8  goto 53
	expr_7  goto 54
	expr_6  goto 55
	expr_5  goto 56
	expr_4  goto 57
	expr_3  goto 58
	expr_2  goto 59
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 22
	array : ID array_shape . '=' '{' array_content_elements '}'  (19)
	array : ID array_shape .  (20)
	array_shape : array_shape . '[' expression ']'  (21)

	'='  shift 67
	'['  shift 68
	';'  reduce 20
	','  reduce 20


state 23
	scalar_declaration : scalar_type scalar_ids ';' .  (7)

	.  reduce 7


state 24
	scalar_ids : scalar_ids ',' . scalar_id  (10)

	'*'  shift 69
	ID  shift 70
	.  error

	scalar_id  goto 71


state 25
	array_declaration : scalar_type arrays ';' .  (16)

	.  reduce 16


state 26
	arrays : arrays ',' . array  (17)

	ID  shift 72
	.  error

	array  goto 73


state 27
	compound_statements : '{' . compound_statements scalar_declaration '}'  (123)
	compound_statements : '{' . compound_statements array_declaration '}'  (124)
	compound_statements : '{' . scalar_declaration '}'  (125)
	compound_statements : '{' . array_declaration '}'  (126)
	compound_statements : '{' . statements '}'  (127)
	compound_statements : '{' . '}'  (128)
	expression : .  (36)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	'{'  shift 27
	'}'  shift 74
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	TYPE  shift 1
	ID  shift 46
	IF  shift 75
	SWITCH  shift 76
	WHILE  shift 77
	DO  shift 78
	FOR  shift 79
	RETURN  shift 80
	BREAK  shift 81
	CONTINUE  shift 82
	';'  reduce 36

	expression  goto 83
	expr_14  goto 48
	expr_12  goto 49
	expr_11  goto 50
	expr_10  goto 51
	expr_9  goto 52
	expr_8  goto 53
	expr_7  goto 54
	expr_6  goto 55
	expr_5  goto 56
	expr_4  goto 57
	expr_3  goto 58
	expr_2  goto 59
	expr_1  goto 60
	variable  goto 61
	literal  goto 62
	scalar_declaration  goto 84
	scalar_type  goto 85
	array_declaration  goto 86
	compound_statements  goto 87
	statements  goto 88
	statement  goto 89
	if_statement  goto 90
	switch_statement  goto 91
	while_statement  goto 92
	for_statement  goto 93
	return_statement  goto 94
	break_statement  goto 95
	continue_statement  goto 96


state 28
	func_declaration : scalar_type function ';' .  (27)

	.  reduce 27


state 29
	func_declaration : scalar_type function compound_statements .  (28)

	.  reduce 28


state 30
	scalar_id : '*' ID '=' . expression  (13)
	expression : .  (36)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	';'  reduce 36
	','  reduce 36

	expression  goto 97
	expr_14  goto 48
	expr_12  goto 49
	expr_11  goto 50
	expr_10  goto 51
	expr_9  goto 52
	expr_8  goto 53
	expr_7  goto 54
	expr_6  goto 55
	expr_5  goto 56
	expr_4  goto 57
	expr_3  goto 58
	expr_2  goto 59
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 31
	function : '*' ID '(' . func_parameters ')'  (30)
	func_parameter : .  (35)

	TYPE  shift 1
	')'  reduce 35
	','  reduce 35

	scalar_type  goto 63
	func_parameters  goto 98
	func_parameter  goto 65


state 32
	expr_2 : '&' . expr_2  (75)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	.  error

	expr_2  goto 99
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 33
	expr_2 : '+' . expr_2  (70)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	.  error

	expr_2  goto 100
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 34
	expr_2 : '-' . expr_2  (71)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	.  error

	expr_2  goto 101
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 35
	expr_2 : '*' . expr_2  (74)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	.  error

	expr_2  goto 102
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 36
	expr_2 : INC . expr_2  (68)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	.  error

	expr_2  goto 103
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 37
	expr_2 : DEC . expr_2  (69)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	.  error

	expr_2  goto 104
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 38
	expr_2 : '~' . expr_2  (73)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	.  error

	expr_2  goto 105
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 39
	expr_2 : '!' . expr_2  (72)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	.  error

	expr_2  goto 106
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 40
	expr_2 : '(' . scalar_type ')' expr_2  (76)
	expr_2 : '(' . scalar_type '*' ')' expr_2  (77)
	expr_1 : '(' . expression ')'  (82)
	expression : .  (36)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	TYPE  shift 1
	ID  shift 46
	')'  reduce 36

	expression  goto 107
	expr_14  goto 48
	expr_12  goto 49
	expr_11  goto 50
	expr_10  goto 51
	expr_9  goto 52
	expr_8  goto 53
	expr_7  goto 54
	expr_6  goto 55
	expr_5  goto 56
	expr_4  goto 57
	expr_3  goto 58
	expr_2  goto 59
	expr_1  goto 60
	variable  goto 61
	literal  goto 62
	scalar_type  goto 108


state 41
	expr_1 : Null .  (88)

	.  reduce 88


state 42
	literal : INT .  (92)

	.  reduce 92


state 43
	literal : FLOAT .  (93)

	.  reduce 93


state 44
	literal : CHAR .  (94)

	.  reduce 94


state 45
	literal : STR .  (95)

	.  reduce 95


state 46
	expr_1 : ID . array_shape  (84)
	variable : ID .  (91)

	'['  shift 21
	'='  reduce 91
	OR  reduce 91
	AND  reduce 91
	'|'  reduce 91
	'^'  reduce 91
	'&'  reduce 91
	EQUAL  reduce 91
	NOT_EQUAL  reduce 91
	'<'  reduce 91
	'>'  reduce 91
	GE  reduce 91
	LE  reduce 91
	RS  reduce 91
	LS  reduce 91
	'+'  reduce 91
	'-'  reduce 91
	'*'  reduce 91
	'/'  reduce 91
	'%'  reduce 91
	INC  reduce 91
	DEC  reduce 91
	'('  reduce 91
	')'  reduce 91
	']'  reduce 91
	'}'  reduce 91
	ID  reduce 91
	';'  reduce 91
	','  reduce 91
	':'  reduce 91

	array_shape  goto 109


state 47
	scalar_id : ID '=' expression .  (12)

	.  reduce 12


state 48
	expression : expr_14 .  (37)

	.  reduce 37


state 49
	expr_14 : expr_12 . '=' expr_14  (38)
	expr_14 : expr_12 .  (39)
	expr_12 : expr_12 . OR expr_11  (40)

	'='  shift 110
	OR  shift 111
	')'  reduce 39
	']'  reduce 39
	'}'  reduce 39
	';'  reduce 39
	','  reduce 39
	':'  reduce 39


state 50
	expr_12 : expr_11 .  (41)
	expr_11 : expr_11 . AND expr_10  (42)

	AND  shift 112
	'='  reduce 41
	OR  reduce 41
	')'  reduce 41
	']'  reduce 41
	'}'  reduce 41
	';'  reduce 41
	','  reduce 41
	':'  reduce 41


state 51
	expr_11 : expr_10 .  (43)
	expr_10 : expr_10 . '|' expr_9  (44)

	'|'  shift 113
	'='  reduce 43
	OR  reduce 43
	AND  reduce 43
	')'  reduce 43
	']'  reduce 43
	'}'  reduce 43
	';'  reduce 43
	','  reduce 43
	':'  reduce 43


state 52
	expr_10 : expr_9 .  (45)
	expr_9 : expr_9 . '^' expr_8  (46)

	'^'  shift 114
	'='  reduce 45
	OR  reduce 45
	AND  reduce 45
	'|'  reduce 45
	')'  reduce 45
	']'  reduce 45
	'}'  reduce 45
	';'  reduce 45
	','  reduce 45
	':'  reduce 45


state 53
	expr_9 : expr_8 .  (47)
	expr_8 : expr_8 . '&' expr_7  (48)

	'&'  shift 115
	'='  reduce 47
	OR  reduce 47
	AND  reduce 47
	'|'  reduce 47
	'^'  reduce 47
	')'  reduce 47
	']'  reduce 47
	'}'  reduce 47
	';'  reduce 47
	','  reduce 47
	':'  reduce 47


state 54
	expr_8 : expr_7 .  (49)
	expr_7 : expr_7 . EQUAL expr_6  (50)
	expr_7 : expr_7 . NOT_EQUAL expr_6  (51)

	EQUAL  shift 116
	NOT_EQUAL  shift 117
	'='  reduce 49
	OR  reduce 49
	AND  reduce 49
	'|'  reduce 49
	'^'  reduce 49
	'&'  reduce 49
	')'  reduce 49
	']'  reduce 49
	'}'  reduce 49
	';'  reduce 49
	','  reduce 49
	':'  reduce 49


state 55
	expr_7 : expr_6 .  (52)
	expr_6 : expr_6 . '<' expr_5  (53)
	expr_6 : expr_6 . '>' expr_5  (54)
	expr_6 : expr_6 . GE expr_5  (55)
	expr_6 : expr_6 . LE expr_5  (56)

	'<'  shift 118
	'>'  shift 119
	GE  shift 120
	LE  shift 121
	'='  reduce 52
	OR  reduce 52
	AND  reduce 52
	'|'  reduce 52
	'^'  reduce 52
	'&'  reduce 52
	EQUAL  reduce 52
	NOT_EQUAL  reduce 52
	')'  reduce 52
	']'  reduce 52
	'}'  reduce 52
	';'  reduce 52
	','  reduce 52
	':'  reduce 52


state 56
	expr_6 : expr_5 .  (57)
	expr_5 : expr_5 . RS expr_4  (58)
	expr_5 : expr_5 . LS expr_4  (59)

	RS  shift 122
	LS  shift 123
	'='  reduce 57
	OR  reduce 57
	AND  reduce 57
	'|'  reduce 57
	'^'  reduce 57
	'&'  reduce 57
	EQUAL  reduce 57
	NOT_EQUAL  reduce 57
	'<'  reduce 57
	'>'  reduce 57
	GE  reduce 57
	LE  reduce 57
	')'  reduce 57
	']'  reduce 57
	'}'  reduce 57
	';'  reduce 57
	','  reduce 57
	':'  reduce 57


state 57
	expr_5 : expr_4 .  (60)
	expr_4 : expr_4 . '+' expr_3  (61)
	expr_4 : expr_4 . '-' expr_3  (62)

	'+'  shift 124
	'-'  shift 125
	'='  reduce 60
	OR  reduce 60
	AND  reduce 60
	'|'  reduce 60
	'^'  reduce 60
	'&'  reduce 60
	EQUAL  reduce 60
	NOT_EQUAL  reduce 60
	'<'  reduce 60
	'>'  reduce 60
	GE  reduce 60
	LE  reduce 60
	RS  reduce 60
	LS  reduce 60
	')'  reduce 60
	']'  reduce 60
	'}'  reduce 60
	';'  reduce 60
	','  reduce 60
	':'  reduce 60


state 58
	expr_4 : expr_3 .  (63)
	expr_3 : expr_3 . '*' expr_2  (64)
	expr_3 : expr_3 . '/' expr_2  (65)
	expr_3 : expr_3 . '%' expr_2  (66)

	'*'  shift 126
	'/'  shift 127
	'%'  shift 128
	'='  reduce 63
	OR  reduce 63
	AND  reduce 63
	'|'  reduce 63
	'^'  reduce 63
	'&'  reduce 63
	EQUAL  reduce 63
	NOT_EQUAL  reduce 63
	'<'  reduce 63
	'>'  reduce 63
	GE  reduce 63
	LE  reduce 63
	RS  reduce 63
	LS  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	')'  reduce 63
	']'  reduce 63
	'}'  reduce 63
	';'  reduce 63
	','  reduce 63
	':'  reduce 63


state 59
	expr_3 : expr_2 .  (67)

	.  reduce 67


state 60
	expr_2 : expr_1 .  (78)
	expr_1 : expr_1 . INC  (79)
	expr_1 : expr_1 . DEC  (80)
	expr_1 : expr_1 . variable '(' ')'  (81)
	expr_1 : expr_1 . ID array_shape  (83)
	expr_1 : expr_1 . '(' func_call_parameters ')'  (85)

	INC  shift 129
	DEC  shift 130
	'('  shift 131
	ID  shift 132
	'='  reduce 78
	OR  reduce 78
	AND  reduce 78
	'|'  reduce 78
	'^'  reduce 78
	'&'  reduce 78
	EQUAL  reduce 78
	NOT_EQUAL  reduce 78
	'<'  reduce 78
	'>'  reduce 78
	GE  reduce 78
	LE  reduce 78
	RS  reduce 78
	LS  reduce 78
	'+'  reduce 78
	'-'  reduce 78
	'*'  reduce 78
	'/'  reduce 78
	'%'  reduce 78
	')'  reduce 78
	']'  reduce 78
	'}'  reduce 78
	';'  reduce 78
	','  reduce 78
	':'  reduce 78

	variable  goto 133


state 61
	expr_1 : variable .  (86)

	.  reduce 86


state 62
	expr_1 : literal .  (87)

	.  reduce 87


state 63
	scalar_type : scalar_type . TYPE  (8)
	func_parameter : scalar_type . ID  (33)
	func_parameter : scalar_type . '*' ID  (34)

	'*'  shift 134
	TYPE  shift 11
	ID  shift 135
	.  error


state 64
	function : ID '(' func_parameters . ')'  (29)
	func_parameters : func_parameters . ',' func_parameter  (31)

	')'  shift 136
	','  shift 137
	.  error


state 65
	func_parameters : func_parameter .  (32)

	.  reduce 32


state 66
	array_shape : '[' expression . ']'  (22)

	']'  shift 138
	.  error


state 67
	array : ID array_shape '=' . '{' array_content_elements '}'  (19)

	'{'  shift 139
	.  error


state 68
	array_shape : array_shape '[' . expression ']'  (21)
	expression : .  (36)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	']'  reduce 36

	expression  goto 140
	expr_14  goto 48
	expr_12  goto 49
	expr_11  goto 50
	expr_10  goto 51
	expr_9  goto 52
	expr_8  goto 53
	expr_7  goto 54
	expr_6  goto 55
	expr_5  goto 56
	expr_4  goto 57
	expr_3  goto 58
	expr_2  goto 59
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 69
	scalar_id : '*' . ID '=' expression  (13)
	scalar_id : '*' . ID  (15)

	ID  shift 141
	.  error


state 70
	scalar_id : ID . '=' expression  (12)
	scalar_id : ID .  (14)

	'='  shift 19
	';'  reduce 14
	','  reduce 14


state 71
	scalar_ids : scalar_ids ',' scalar_id .  (10)

	.  reduce 10


state 72
	array : ID . array_shape '=' '{' array_content_elements '}'  (19)
	array : ID . array_shape  (20)

	'['  shift 21
	.  error

	array_shape  goto 22


state 73
	arrays : arrays ',' array .  (17)

	.  reduce 17


state 74
	compound_statements : '{' '}' .  (128)

	.  reduce 128


state 75
	if_statement : IF . '(' expression ')' compound_statements  (107)
	if_statement : IF . '(' expression ')' compound_statements ELSE compound_statements  (108)

	'('  shift 142
	.  error


state 76
	switch_statement : SWITCH . '(' expression ')' '{' switch_cases '}'  (109)

	'('  shift 143
	.  error


state 77
	while_statement : WHILE . '(' expression ')' statement  (116)

	'('  shift 144
	.  error


state 78
	while_statement : DO . statement WHILE '(' expression ')' ';'  (117)
	expression : .  (36)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	'{'  shift 27
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	IF  shift 75
	SWITCH  shift 76
	WHILE  shift 77
	DO  shift 78
	FOR  shift 79
	RETURN  shift 80
	BREAK  shift 81
	CONTINUE  shift 82
	';'  reduce 36

	expression  goto 83
	expr_14  goto 48
	expr_12  goto 49
	expr_11  goto 50
	expr_10  goto 51
	expr_9  goto 52
	expr_8  goto 53
	expr_7  goto 54
	expr_6  goto 55
	expr_5  goto 56
	expr_4  goto 57
	expr_3  goto 58
	expr_2  goto 59
	expr_1  goto 60
	variable  goto 61
	literal  goto 62
	compound_statements  goto 145
	statement  goto 146
	if_statement  goto 90
	switch_statement  goto 91
	while_statement  goto 92
	for_statement  goto 93
	return_statement  goto 94
	break_statement  goto 95
	continue_statement  goto 96


state 79
	for_statement : FOR . '(' for_parameters ')' statement  (118)

	'('  shift 147
	.  error


state 80
	return_statement : RETURN . expression ';'  (120)
	expression : .  (36)

	'&'  shift 32
	'+'  shift 33
	'-'  shift 34
	'*'  shift 35
	INC  shift 36
	DEC  shift 37
	'~'  shift 38
	'!'  shift 39
	'('  shift 40
	Null  shift 41
	INT  shift 42
	FLOAT  shift 43
	CHAR  shift 44
	STR  shift 45
	ID  shift 46
	';'  reduce 36

	expression  goto 148
	expr_14  goto 48
	expr_12  goto 49
	expr_11  goto 50
	expr_10  goto 51
	expr_9  goto 52
	expr_8  goto 53
	expr_7  goto 54
	expr_6  goto 55
	expr_5  goto 56
	expr_4  goto 57
	expr_3  goto 58
	expr_2  goto 59
	expr_1  goto 60
	variable  goto 61
	literal  goto 62


state 81
	break_statement : BREAK . ';'  (121)

	';'  shift 149
	.  error


state 82
	continue_statement : CONTINUE . ';'  (122)

	';'  shift 150
	.  error


state 83
	statement : expression . ';'  (98)

	';'  shift 151
	.  error


state 84
	compound_statements : '{' scalar_declaration . '}'  (125)

	'}'  shift 152
	.  error


state 85
	scalar_declaration : scalar_type . scalar_ids ';'  (7)
	scalar_type : scalar_type . TYPE  (8)
	array_declaration : scalar_type . arrays ';'  (16)

	'*'  shift 69
	TYPE  shift 11
	ID  shift 153
	.  error

	scalar_ids  goto 13
	scalar_id  goto 14
	arrays  goto 15
	array  goto 16


state 86
	compound_statements : '{' array_declaration . '}'  (126)

	'}'  shift 154
	.  error


state 87
	statement : compound_statements .  (106)
	compound_statements : '{' compound_statements . scalar_declaration '}'  (123)
	compound_statements : '{' compound_statements . array_declaration '}'  (124)

	TYPE  shift 1
	'&'  reduce 106
	'+'  reduce 106
	'-'  reduce 106
	'*'  reduce 106
	INC  reduce 106
	DEC  reduce 106
	'~'  reduce 106
	'!'  reduce 106
	'('  reduce 106
	'{'  reduce 106
	'}'  reduce 106
	Null  reduce 106
	INT  reduce 106
	FLOAT  reduce 106
	CHAR  reduce 106
	STR  reduce 106
	ID  reduce 106
	';'  reduce 106
	IF  reduce 106
	SWITCH  reduce 106
	WHILE  reduce 106
	DO  reduce 106
	FOR  reduce 106
	RETURN  reduce 106
	BREAK  reduce 106
	CONTINUE  reduce 106
